--- a/서버프로그램구현/css/style.css
+++ b/서버프로그램구현/css/style.css
@@ -6,7 +6,8 @@
 }
 
 .con{
-    width: 500px;
+    width: 100%;
+    max-width: 500px;
     height: 400px;
     border: 1px solid lightgrey;
     border-radius: 10px;
@@ -15,8 +16,7 @@
 }
 
 .header{
-    height: 80px;
-    border-bottom: 1px solid lightgrey;
+    height: 75px;
     display: flex;
     align-items: center;
 }
@@ -31,12 +31,17 @@
 }
 
 .main{
+    width: 500px;
+    height: 250px;
     overflow: hidden;
 }
 
-.footer{
-    height: 240px;
-    border-bottom: 1px solid lightgrey;
+.like i{
+    font-size: 20px;
+    margin: 25px 5px 0 20px;
+}
 
+.fa-solid{
+    color: red;
 }
 
